force-app/main/default/objects/Document_Request__c/Document_Request__c.object-meta.xml
<CustomObject>
    <label>Document Request</label>
    <nameField>
        <displayFormat>REQ-{00000}</displayFormat>
        <label>Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Document Requests</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>