force-app/main/default/objects/Document_Request__c/fields/Config_Developer_Name__c.field-meta.xml
<CustomField>
    <fullName>Config_Developer_Name__c</fullName>
    <label>Config Developer Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>