force-app/main/default/objects/Document_Request__c/fields/File_Count__c.field-meta.xml
<CustomField>
    <fullName>File_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <label>File Count</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>