force-app/main/default/objects/Document_Request__c/fields/Files_Received_Date__c.field-meta.xml
<CustomField>
    <fullName>Files_Received_Date__c</fullName>
    <label>Files Received Date</label>
    <type>DateTime</type>
</CustomField>