force-app/main/default/objects/Document_Request__c/fields/Recipient_Contact__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Recipient Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Document Requests</relationshipLabel>
    <relationshipName>Document_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>