force-app/main/default/objects/Document_Request__c/fields/Request_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Request_Instructions__c</fullName>
    <label>Request Instructions</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>