force-app/main/default/objects/Document_Request__c/fields/Request_Token__c.field-meta.xml
<CustomField>
    <fullName>Request_Token__c</fullName>
    <externalId>true</externalId>
    <label>Request Token</label>
    <length>36</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>