force-app/main/default/objects/Document_Request__c/fields/Review_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Completed_Date__c</fullName>
    <label>Review Completed Date</label>
    <type>DateTime</type>
</CustomField>