force-app/main/default/objects/Document_Request__c/fields/Source_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Source_Record_Id__c</fullName>
    <label>Source Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>