force-app/main/default/objects/Document_Request__c/listViews/All_Requests.listView-meta.xml
<ListView>
    <fullName>All_Requests</fullName>
    <columns>NAME</columns>
    <columns>Requested_By__c</columns>
    <columns>Status__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>File_Count__c</columns>
    <columns>Request_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Requests</label>
</ListView>