force-app/main/default/objects/Document_Request__c/listViews/Awaiting_Files.listView-meta.xml
<ListView>
    <fullName>Awaiting_Files</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Token_Expiration__c</columns>
    <columns>Requested_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <label>Awaiting Files</label>
</ListView>