force-app/main/default/objects/Document_Request__c/listViews/Completed_Rejected.listView-meta.xml
<ListView>
    <fullName>Completed_Rejected</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Review_Notes__c</columns>
    <columns>Review_Completed_Date__c</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Requested_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Rejected</value>
    </filters>
    <label>Completed - Rejected</label>
</ListView>