force-app/main/default/objects/Document_Request__c/listViews/Expired_Requests.listView-meta.xml
<ListView>
    <fullName>Expired_Requests</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Token_Expiration__c</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Requested_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Expired</value>
    </filters>
    <label>Expired Requests</label>
</ListView>