force-app/main/default/objects/Document_Request__c/listViews/Expiring_Soon.listView-meta.xml
<ListView>
    <fullName>Expiring_Soon</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Token_Expiration__c</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Requested_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Sent</value>
    </filters>
    <filters>
        <field>Token_Expiration__c</field>
        <operation>equals</operation>
        <value>NEXT_N_DAYS:3</value>
    </filters>
    <label>Expiring Soon (3 Days)</label>
</ListView>