force-app/main/default/objects/Document_Request__c/listViews/My_Requests.listView-meta.xml
<ListView>
    <fullName>My_Requests</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Request_Date__c</columns>
    <columns>Review_Completed_Date__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Requests</label>
</ListView>