force-app/main/default/objects/Document_Request__c/listViews/Pending_Review.listView-meta.xml
<ListView>
    <fullName>Pending_Review</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Recipient_Email__c</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>File_Count__c</columns>
    <columns>Files_Received_Date__c</columns>
    <columns>Token_Expiration__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Files_Received,Under_Review</value>
    </filters>
    <label>Pending Review</label>
</ListView>