force-app/main/default/objects/Document_Request__c/listViews/Ready_For_Review.listView-meta.xml
<ListView>
    <fullName>Ready_For_Review</fullName>
    <columns>NAME</columns>
    <columns>Recipient_Name__c</columns>
    <columns>File_Count__c</columns>
    <columns>Files_Received_Date__c</columns>
    <columns>Source_Object_API_Name__c</columns>
    <columns>Requested_By__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Files_Received</value>
    </filters>
    <label>Ready for Review</label>
</ListView>